finished basic timeline functionality for observations